--- a/prj.conf
+++ b/prj.conf
@@ -12,3 +12,6 @@ CONFIG_UART_INTERRUPT_DRIVEN=y
 CONFIG_UART_LINE_CTRL=y
 CONFIG_USB_DEVICE_INITIALIZE_AT_BOOT=n
 CONFIG_GPIO=y
+
+# Adding I2C
+CONFIG_I2C=y
