Add bme280 read temperature functionality for testing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,10 @@
 
 cmake_minimum_required(VERSION 3.20.0)
 set(BOARD blackpill_f401ce)
+set(DTC_OVERLAY_FILE blackpill_f401ce.overlay)
+
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 
 project(usb_non_standard_class)
 
-target_sources(app  PRIVATE src/main.c src/led.c)
+target_sources(app  PRIVATE src/main.c src/led.c src/bme280.c)
